# blue-app-iota

./: .clang-format  .codecov.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  APDU API.md  APDU_API.md  CMakeLists.txt  Dockerfile  LICENSE  Ledger Nano S Documentation.md  Ledger Nano S Web Wallet and APDU API Documentation and implementation.md  Makefile  README.md  TODO.md  WARNING.md  activate_virt_env.sh  build.sh  del_test_main.py  demo.py  install_dev_env.sh  make.sh  test.sh  test_compact_tx.py  test_main_tx.py
.github/: dependabot.yml
.github/workflows/: asan.yml  build.yml  clang.yml  cmake.yml  codegov.yml
Ledger-Test-Env/Ledger-Test-Env/: add_index_tront.c  add_index_tront.h  add_seed_index_test.c  aux.c  aux.h  bigint.c  bigint.h  main.c  main.h  misc.c  misc.h  test_conversions.c  test_conversions.h  test_kerl.c  test_kerl.h  test_transactions.c  test_transactions.h  word_converter_test.c  word_converter_test.h
Ledger-Test-Env/Ledger-Test-Env.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Ledger-Test-Env/Ledger-Test-Env.xcodeproj/project.xcworkspace/xcuserdata/Hann.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
Ledger-Test-Env/Ledger-Test-Env.xcodeproj/xcuserdata/Hann.xcuserdatad/xcschemes/: xcschememanagement.plist
contrib/: docker_travis_build.sh  private.key.enc  public.asc
debug/: app.asm
demos/nodejs/: .flowconfig  README.md  demo.js  index.js  package.json
demos/nodejs/src/: index.js
demos/python/: demo.py  test_bundle.py
demos/u2f/: .babelrc  .gitignore  README.md  package.json
demos/u2f/src/: index.js
docker/: Dockerfile  README.md  build_load_app.sh  run_simulator.sh
docs/: specification.md
iota-js-address-test/: index.js
resources/: IOTA-Ledger Manager icon template.ai  IOTA-Ledger Nano S icon template.ai
src/: apdu.h  api.c  api.h  aux.c  aux.h  chars_utils.c  chars_utils.h  common.h  glyphs.c  glyphs.h  instructions.c  instructions.h  iota_io.c  iota_io.h  macros.h  main.c  main.h  main_tx.c  main_tx.h  misc.c  misc.h  storage.c  storage.h  ui.c  ui.h
src/iota/: addresses.c  addresses.h  bundle.c  bundle.h  common.h  conversion.c  conversion.h  iota_types.h  kerl.c  kerl.h  seed.c  seed.h  signing.c  signing.h  transaction.c  transfers.c  transfers.h
src/keccak/: macros.h  sha3.c  sha3.h
src/ui/: ui.c  ui.h  ui_buttons.c  ui_buttons.h  ui_common.c  ui_common.h  ui_display.c  ui_display.h  ui_elements.h  ui_handling.c  ui_handling.h  ui_misc.c  ui_misc.h  ui_text.c  ui_text.h  ui_types.h
src/ui/blue/: blue_buttons.c  blue_buttons.h  blue_core.c  blue_core.h  blue_elements.h  blue_misc.c  blue_misc.h  blue_screens.h  blue_types.h
src/ui/nano/: nano_buttons.c  nano_buttons.h  nano_core.c  nano_core.h  nano_display.c  nano_display.h  nano_draw.c  nano_draw.h  nano_misc.c  nano_misc.h  nano_screens.h  nano_text.c  nano_text.h  nano_types.h  nanos_buttons.c  nanos_core.h  nanos_display.c  nanos_elements.h  nanos_misc.c  nanos_misc.h  nanos_screens.h  nanos_text.c  s_core.c  s_core.h  s_elements.h  s_screens.h  s_types.h  shared_buttons.c  shared_display.c  shared_misc.c  shared_misc.h  shared_text.c  shared_text.h  x_core.c  x_core.h  x_elements.h  x_screens.h  x_types.h
src/ui/nanos/: nanos_buttons.c  nanos_buttons.h  nanos_core.c  nanos_core.h  nanos_ctx.c  nanos_display.h  nanos_elements.h  nanos_misc.c  nanos_misc.h  nanos_screens.h  nanos_text.c  nanos_types.h
src/ui/nanox/: nanox_core.c  nanox_elements.h  nanox_screens.h  nanox_types.h
tests/: .gitignore  CMakeLists.txt  address_test.c  api_test.c  api_tests.h  bundle_ext.c  bundle_test.c  conversion_test.c  get_app_config_test.c  hash_file.c  hash_file.h  kerl_test.c  os.c  os.h  pubkey_test.c  reset_test.c  seed_test.c  set_seed_test.c  sign_test.c  signing_test.c  test_common.h  test_constants.h  test_mocks.c  test_seed.c  test_seed.h  test_ternary.c  test_ternary.h  test_vectors.h  transaction_file.c  transaction_file.h  tx_test.c
tests/bundle-generator/: index.js  package.json
tests/cmake/modules/: CodeCoverage.cmake
tests/iota-js-address-test/: bundle.js  index.js  package-lock.json  package.json  signing.js
tests/test_vectors/: generateBundlesForSeed
